syntax = "proto3";

package promotion.admin;
option go_package = "github.com/minhvuongrbs/financial-service-example";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/rpc/error_details.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-swagger/options/annotations.proto";

service PromotionAdmin {
  rpc DefineCampaign (DefineCampaignRequest) returns (DefineCampaignReply){
    option (google.api.http) = {
      post: "/api/app/v1/promotion-admin/campaigns/define"
      body: "*"
    };
  }

  rpc DefineVoucher (DefineVoucherRequest) returns (DefineVoucherReply){
    option (google.api.http) = {
      post: "/api/app/v1/promotion-admin/vouchers/define"
      body: "*"
    };
  };
}

message DefineVoucherRequest {
  string name = 1;
  bool is_active = 2;
  string description = 3;
  VoucherMetadata metadata = 4;
}

message VoucherMetadata {
  google.protobuf.Timestamp expiration_time = 1;
  VoucherStrategy strategy = 2;
}

message VoucherStrategy {
  oneof metadata {
    VoucherStrategyFixedAmountForAppIds fixed_amount_for_app_ids = 1;
    VoucherStrategyPercentageDiscountForAppIds percentage_discount_for_app_ids = 2;
  }
}

message VoucherStrategyFixedAmountForAppIds {
  int64 amount = 1;
  repeated int64 app_id = 2;
}

message VoucherStrategyPercentageDiscountForAppIds {
  int64 percentage = 1; // 30% => 30
  repeated int64 app_id = 2;
}

message DefineVoucherReply {
  int32 code = 1;
  string message = 2;
}

enum CampaignStatus {
  CAMPAIGN_STATUS_ACTIVE = 0;
  CAMPAIGN_STATUS_INACTIVE = 1;
}

message DefineCampaignRequest {
  string name = 1;
  CampaignStatus status = 2;
  CampaignMetadata metadata = 3;
}

message CampaignMetadata {
  google.protobuf.Timestamp start_at = 1;
  google.protobuf.Timestamp end_at = 2;
  CampaignStrategy strategy = 3;
}

message CampaignStrategy {
  oneof metadata {
    CampaignStrategyTopRegister strategy_top_register = 2;
    CampaignStrategySpending strategy_spending = 3;
  }
}

message CampaignStrategyTopRegister {
    repeated Voucher vouchers = 1;
    int64 top_users = 2;
}

message CampaignStrategySpending {}

message Voucher {
  int64 id = 1;
  int64 total_vouchers = 2;
}

message DefineCampaignReply {
  int32 code = 1;
  string message = 2;
}